// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildrenInput renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChildrenInput
    classes={Object {}}
    onChange={[Function]}
    students={
      Array [
        Immutable.Record {
          "id": "fdas90ß9sß0",
          "username": "hhansen",
          "children": Array [],
          "displayname": "Horst Hansen",
          "email": "hort@hansen.de",
          "isAdult": false,
          "role": "student",
          "childrenIds": Array [],
          "graduationYear": null,
        },
        Immutable.Record {
          "id": "jkldsfjlk",
          "username": "hball",
          "children": Array [],
          "displayname": "Hanni Ball",
          "email": "hanni@ball.de",
          "isAdult": false,
          "role": "student",
          "childrenIds": Array [],
          "graduationYear": null,
        },
      ]
    }
  >
    Immutable.Record {
      "id": "fdas90ß9sß0",
      "username": "hhansen",
      "children": Array [],
      "displayname": "Horst Hansen",
      "email": "hort@hansen.de",
      "isAdult": false,
      "role": "student",
      "childrenIds": Array [],
      "graduationYear": null,
    }
  </ChildrenInput>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            variant="title"
          >
            Kinder
          </WithStyles(Typography)>
        </WithStyles(Grid)>,
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(List)>
            <WithStyles(ListItem)>
              <WithStyles(ListItemText)
                primary="Horst Hansen"
              />
              <WithStyles(ListItemSecondaryAction)>
                <WithStyles(IconButton)
                  onClick={[Function]}
                >
                  <pure(DeleteIcon) />
                </WithStyles(IconButton)>
              </WithStyles(ListItemSecondaryAction)>
            </WithStyles(ListItem)>
          </WithStyles(List)>
        </WithStyles(Grid)>,
        <WithStyles(Grid)
          container={true}
          item={true}
        >
          <WithStyles(Grid)
            item={true}
            xs={11}
          >
            <SearchableDropdownUser
              helperText="Kinder Hinzufügen"
              includeItem={[Function]}
              itemToString={[Function]}
              items={
                Array [
                  Immutable.Record {
                    "id": "jkldsfjlk",
                    "username": "hball",
                    "children": Array [],
                    "displayname": "Hanni Ball",
                    "email": "hanni@ball.de",
                    "isAdult": false,
                    "role": "student",
                    "childrenIds": Array [],
                    "graduationYear": null,
                  },
                ]
              }
              label="Kind"
              onChange={[Function]}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={1}
          >
            <WithStyles(Button)
              className="add"
              disabled={false}
              mini={true}
              onClick={[Function]}
              variant="fab"
            >
              <pure(AddIcon) />
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>,
      ],
      "container": true,
      "direction": "column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(Typography)
            variant="title"
          >
            Kinder
          </WithStyles(Typography)>,
          "item": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Kinder",
            "variant": "title",
          },
          "ref": null,
          "rendered": "Kinder",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(List)>
            <WithStyles(ListItem)>
              <WithStyles(ListItemText)
                primary="Horst Hansen"
              />
              <WithStyles(ListItemSecondaryAction)>
                <WithStyles(IconButton)
                  onClick={[Function]}
                >
                  <pure(DeleteIcon) />
                </WithStyles(IconButton)>
              </WithStyles(ListItemSecondaryAction)>
            </WithStyles(ListItem)>
          </WithStyles(List)>,
          "item": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(ListItem)>
                <WithStyles(ListItemText)
                  primary="Horst Hansen"
                />
                <WithStyles(ListItemSecondaryAction)>
                  <WithStyles(IconButton)
                    onClick={[Function]}
                  >
                    <pure(DeleteIcon) />
                  </WithStyles(IconButton)>
                </WithStyles(ListItemSecondaryAction)>
              </WithStyles(ListItem)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <WithStyles(ListItemText)
                    primary="Horst Hansen"
                  />,
                  <WithStyles(ListItemSecondaryAction)>
                    <WithStyles(IconButton)
                      onClick={[Function]}
                    >
                      <pure(DeleteIcon) />
                    </WithStyles(IconButton)>
                  </WithStyles(ListItemSecondaryAction)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "primary": "Horst Hansen",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <WithStyles(IconButton)
                      onClick={[Function]}
                    >
                      <pure(DeleteIcon) />
                    </WithStyles(IconButton)>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <pure(DeleteIcon) />,
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {},
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Grid)
              item={true}
              xs={11}
            >
              <SearchableDropdownUser
                helperText="Kinder Hinzufügen"
                includeItem={[Function]}
                itemToString={[Function]}
                items={
                  Array [
                    Immutable.Record {
                      "id": "jkldsfjlk",
                      "username": "hball",
                      "children": Array [],
                      "displayname": "Hanni Ball",
                      "email": "hanni@ball.de",
                      "isAdult": false,
                      "role": "student",
                      "childrenIds": Array [],
                      "graduationYear": null,
                    },
                  ]
                }
                label="Kind"
                onChange={[Function]}
              />
            </WithStyles(Grid)>,
            <WithStyles(Grid)
              item={true}
              xs={1}
            >
              <WithStyles(Button)
                className="add"
                disabled={false}
                mini={true}
                onClick={[Function]}
                variant="fab"
              >
                <pure(AddIcon) />
              </WithStyles(Button)>
            </WithStyles(Grid)>,
          ],
          "container": true,
          "item": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <SearchableDropdownUser
                helperText="Kinder Hinzufügen"
                includeItem={[Function]}
                itemToString={[Function]}
                items={
                  Array [
                    Immutable.Record {
                      "id": "jkldsfjlk",
                      "username": "hball",
                      "children": Array [],
                      "displayname": "Hanni Ball",
                      "email": "hanni@ball.de",
                      "isAdult": false,
                      "role": "student",
                      "childrenIds": Array [],
                      "graduationYear": null,
                    },
                  ]
                }
                label="Kind"
                onChange={[Function]}
              />,
              "item": true,
              "xs": 11,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "helperText": "Kinder Hinzufügen",
                "includeItem": [Function],
                "itemToString": [Function],
                "items": Array [
                  Immutable.Record {
                    "id": "jkldsfjlk",
                    "username": "hball",
                    "children": Array [],
                    "displayname": "Hanni Ball",
                    "email": "hanni@ball.de",
                    "isAdult": false,
                    "role": "student",
                    "childrenIds": Array [],
                    "graduationYear": null,
                  },
                ],
                "label": "Kind",
                "onChange": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(Button)
                className="add"
                disabled={false}
                mini={true}
                onClick={[Function]}
                variant="fab"
              >
                <pure(AddIcon) />
              </WithStyles(Button)>,
              "item": true,
              "xs": 1,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <pure(AddIcon) />,
                "className": "add",
                "disabled": false,
                "mini": true,
                "onClick": [Function],
                "variant": "fab",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(Typography)
              variant="title"
            >
              Kinder
            </WithStyles(Typography)>
          </WithStyles(Grid)>,
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(List)>
              <WithStyles(ListItem)>
                <WithStyles(ListItemText)
                  primary="Horst Hansen"
                />
                <WithStyles(ListItemSecondaryAction)>
                  <WithStyles(IconButton)
                    onClick={[Function]}
                  >
                    <pure(DeleteIcon) />
                  </WithStyles(IconButton)>
                </WithStyles(ListItemSecondaryAction)>
              </WithStyles(ListItem)>
            </WithStyles(List)>
          </WithStyles(Grid)>,
          <WithStyles(Grid)
            container={true}
            item={true}
          >
            <WithStyles(Grid)
              item={true}
              xs={11}
            >
              <SearchableDropdownUser
                helperText="Kinder Hinzufügen"
                includeItem={[Function]}
                itemToString={[Function]}
                items={
                  Array [
                    Immutable.Record {
                      "id": "jkldsfjlk",
                      "username": "hball",
                      "children": Array [],
                      "displayname": "Hanni Ball",
                      "email": "hanni@ball.de",
                      "isAdult": false,
                      "role": "student",
                      "childrenIds": Array [],
                      "graduationYear": null,
                    },
                  ]
                }
                label="Kind"
                onChange={[Function]}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={1}
            >
              <WithStyles(Button)
                className="add"
                disabled={false}
                mini={true}
                onClick={[Function]}
                variant="fab"
              >
                <pure(AddIcon) />
              </WithStyles(Button)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>,
        ],
        "container": true,
        "direction": "column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <WithStyles(Typography)
              variant="title"
            >
              Kinder
            </WithStyles(Typography)>,
            "item": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Kinder",
              "variant": "title",
            },
            "ref": null,
            "rendered": "Kinder",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <WithStyles(List)>
              <WithStyles(ListItem)>
                <WithStyles(ListItemText)
                  primary="Horst Hansen"
                />
                <WithStyles(ListItemSecondaryAction)>
                  <WithStyles(IconButton)
                    onClick={[Function]}
                  >
                    <pure(DeleteIcon) />
                  </WithStyles(IconButton)>
                </WithStyles(ListItemSecondaryAction)>
              </WithStyles(ListItem)>
            </WithStyles(List)>,
            "item": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(ListItem)>
                  <WithStyles(ListItemText)
                    primary="Horst Hansen"
                  />
                  <WithStyles(ListItemSecondaryAction)>
                    <WithStyles(IconButton)
                      onClick={[Function]}
                    >
                      <pure(DeleteIcon) />
                    </WithStyles(IconButton)>
                  </WithStyles(ListItemSecondaryAction)>
                </WithStyles(ListItem)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <WithStyles(ListItemText)
                      primary="Horst Hansen"
                    />,
                    <WithStyles(ListItemSecondaryAction)>
                      <WithStyles(IconButton)
                        onClick={[Function]}
                      >
                        <pure(DeleteIcon) />
                      </WithStyles(IconButton)>
                    </WithStyles(ListItemSecondaryAction)>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "primary": "Horst Hansen",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <WithStyles(IconButton)
                        onClick={[Function]}
                      >
                        <pure(DeleteIcon) />
                      </WithStyles(IconButton)>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <pure(DeleteIcon) />,
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Grid)
                item={true}
                xs={11}
              >
                <SearchableDropdownUser
                  helperText="Kinder Hinzufügen"
                  includeItem={[Function]}
                  itemToString={[Function]}
                  items={
                    Array [
                      Immutable.Record {
                        "id": "jkldsfjlk",
                        "username": "hball",
                        "children": Array [],
                        "displayname": "Hanni Ball",
                        "email": "hanni@ball.de",
                        "isAdult": false,
                        "role": "student",
                        "childrenIds": Array [],
                        "graduationYear": null,
                      },
                    ]
                  }
                  label="Kind"
                  onChange={[Function]}
                />
              </WithStyles(Grid)>,
              <WithStyles(Grid)
                item={true}
                xs={1}
              >
                <WithStyles(Button)
                  className="add"
                  disabled={false}
                  mini={true}
                  onClick={[Function]}
                  variant="fab"
                >
                  <pure(AddIcon) />
                </WithStyles(Button)>
              </WithStyles(Grid)>,
            ],
            "container": true,
            "item": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <SearchableDropdownUser
                  helperText="Kinder Hinzufügen"
                  includeItem={[Function]}
                  itemToString={[Function]}
                  items={
                    Array [
                      Immutable.Record {
                        "id": "jkldsfjlk",
                        "username": "hball",
                        "children": Array [],
                        "displayname": "Hanni Ball",
                        "email": "hanni@ball.de",
                        "isAdult": false,
                        "role": "student",
                        "childrenIds": Array [],
                        "graduationYear": null,
                      },
                    ]
                  }
                  label="Kind"
                  onChange={[Function]}
                />,
                "item": true,
                "xs": 11,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "helperText": "Kinder Hinzufügen",
                  "includeItem": [Function],
                  "itemToString": [Function],
                  "items": Array [
                    Immutable.Record {
                      "id": "jkldsfjlk",
                      "username": "hball",
                      "children": Array [],
                      "displayname": "Hanni Ball",
                      "email": "hanni@ball.de",
                      "isAdult": false,
                      "role": "student",
                      "childrenIds": Array [],
                      "graduationYear": null,
                    },
                  ],
                  "label": "Kind",
                  "onChange": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <WithStyles(Button)
                  className="add"
                  disabled={false}
                  mini={true}
                  onClick={[Function]}
                  variant="fab"
                >
                  <pure(AddIcon) />
                </WithStyles(Button)>,
                "item": true,
                "xs": 1,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <pure(AddIcon) />,
                  "className": "add",
                  "disabled": false,
                  "mini": true,
                  "onClick": [Function],
                  "variant": "fab",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ChildrenInput renders when no additional users are available 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChildrenInput
    classes={Object {}}
    onChange={[Function]}
    students={
      Array [
        Immutable.Record {
          "id": "fdas90ß9sß0",
          "username": "hhansen",
          "children": Array [],
          "displayname": "Horst Hansen",
          "email": "hort@hansen.de",
          "isAdult": false,
          "role": "student",
          "childrenIds": Array [],
          "graduationYear": null,
        },
      ]
    }
  >
    Immutable.Record {
      "id": "fdas90ß9sß0",
      "username": "hhansen",
      "children": Array [],
      "displayname": "Horst Hansen",
      "email": "hort@hansen.de",
      "isAdult": false,
      "role": "student",
      "childrenIds": Array [],
      "graduationYear": null,
    }
  </ChildrenInput>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            variant="title"
          >
            Kinder
          </WithStyles(Typography)>
        </WithStyles(Grid)>,
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(List)>
            <WithStyles(ListItem)>
              <WithStyles(ListItemText)
                primary="Horst Hansen"
              />
              <WithStyles(ListItemSecondaryAction)>
                <WithStyles(IconButton)
                  onClick={[Function]}
                >
                  <pure(DeleteIcon) />
                </WithStyles(IconButton)>
              </WithStyles(ListItemSecondaryAction)>
            </WithStyles(ListItem)>
          </WithStyles(List)>
        </WithStyles(Grid)>,
        <WithStyles(Grid)
          container={true}
          item={true}
        >
          <WithStyles(Grid)
            item={true}
            xs={11}
          >
            <SearchableDropdownUser
              helperText="Kinder Hinzufügen"
              includeItem={[Function]}
              itemToString={[Function]}
              items={Array []}
              label="Kind"
              onChange={[Function]}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={1}
          >
            <WithStyles(Button)
              className="add"
              disabled={true}
              mini={true}
              onClick={[Function]}
              variant="fab"
            >
              <pure(AddIcon) />
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>,
      ],
      "container": true,
      "direction": "column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(Typography)
            variant="title"
          >
            Kinder
          </WithStyles(Typography)>,
          "item": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Kinder",
            "variant": "title",
          },
          "ref": null,
          "rendered": "Kinder",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(List)>
            <WithStyles(ListItem)>
              <WithStyles(ListItemText)
                primary="Horst Hansen"
              />
              <WithStyles(ListItemSecondaryAction)>
                <WithStyles(IconButton)
                  onClick={[Function]}
                >
                  <pure(DeleteIcon) />
                </WithStyles(IconButton)>
              </WithStyles(ListItemSecondaryAction)>
            </WithStyles(ListItem)>
          </WithStyles(List)>,
          "item": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(ListItem)>
                <WithStyles(ListItemText)
                  primary="Horst Hansen"
                />
                <WithStyles(ListItemSecondaryAction)>
                  <WithStyles(IconButton)
                    onClick={[Function]}
                  >
                    <pure(DeleteIcon) />
                  </WithStyles(IconButton)>
                </WithStyles(ListItemSecondaryAction)>
              </WithStyles(ListItem)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <WithStyles(ListItemText)
                    primary="Horst Hansen"
                  />,
                  <WithStyles(ListItemSecondaryAction)>
                    <WithStyles(IconButton)
                      onClick={[Function]}
                    >
                      <pure(DeleteIcon) />
                    </WithStyles(IconButton)>
                  </WithStyles(ListItemSecondaryAction)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "primary": "Horst Hansen",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <WithStyles(IconButton)
                      onClick={[Function]}
                    >
                      <pure(DeleteIcon) />
                    </WithStyles(IconButton)>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <pure(DeleteIcon) />,
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {},
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Grid)
              item={true}
              xs={11}
            >
              <SearchableDropdownUser
                helperText="Kinder Hinzufügen"
                includeItem={[Function]}
                itemToString={[Function]}
                items={Array []}
                label="Kind"
                onChange={[Function]}
              />
            </WithStyles(Grid)>,
            <WithStyles(Grid)
              item={true}
              xs={1}
            >
              <WithStyles(Button)
                className="add"
                disabled={true}
                mini={true}
                onClick={[Function]}
                variant="fab"
              >
                <pure(AddIcon) />
              </WithStyles(Button)>
            </WithStyles(Grid)>,
          ],
          "container": true,
          "item": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <SearchableDropdownUser
                helperText="Kinder Hinzufügen"
                includeItem={[Function]}
                itemToString={[Function]}
                items={Array []}
                label="Kind"
                onChange={[Function]}
              />,
              "item": true,
              "xs": 11,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "helperText": "Kinder Hinzufügen",
                "includeItem": [Function],
                "itemToString": [Function],
                "items": Array [],
                "label": "Kind",
                "onChange": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(Button)
                className="add"
                disabled={true}
                mini={true}
                onClick={[Function]}
                variant="fab"
              >
                <pure(AddIcon) />
              </WithStyles(Button)>,
              "item": true,
              "xs": 1,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <pure(AddIcon) />,
                "className": "add",
                "disabled": true,
                "mini": true,
                "onClick": [Function],
                "variant": "fab",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(Typography)
              variant="title"
            >
              Kinder
            </WithStyles(Typography)>
          </WithStyles(Grid)>,
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(List)>
              <WithStyles(ListItem)>
                <WithStyles(ListItemText)
                  primary="Horst Hansen"
                />
                <WithStyles(ListItemSecondaryAction)>
                  <WithStyles(IconButton)
                    onClick={[Function]}
                  >
                    <pure(DeleteIcon) />
                  </WithStyles(IconButton)>
                </WithStyles(ListItemSecondaryAction)>
              </WithStyles(ListItem)>
            </WithStyles(List)>
          </WithStyles(Grid)>,
          <WithStyles(Grid)
            container={true}
            item={true}
          >
            <WithStyles(Grid)
              item={true}
              xs={11}
            >
              <SearchableDropdownUser
                helperText="Kinder Hinzufügen"
                includeItem={[Function]}
                itemToString={[Function]}
                items={Array []}
                label="Kind"
                onChange={[Function]}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={1}
            >
              <WithStyles(Button)
                className="add"
                disabled={true}
                mini={true}
                onClick={[Function]}
                variant="fab"
              >
                <pure(AddIcon) />
              </WithStyles(Button)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>,
        ],
        "container": true,
        "direction": "column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <WithStyles(Typography)
              variant="title"
            >
              Kinder
            </WithStyles(Typography)>,
            "item": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Kinder",
              "variant": "title",
            },
            "ref": null,
            "rendered": "Kinder",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <WithStyles(List)>
              <WithStyles(ListItem)>
                <WithStyles(ListItemText)
                  primary="Horst Hansen"
                />
                <WithStyles(ListItemSecondaryAction)>
                  <WithStyles(IconButton)
                    onClick={[Function]}
                  >
                    <pure(DeleteIcon) />
                  </WithStyles(IconButton)>
                </WithStyles(ListItemSecondaryAction)>
              </WithStyles(ListItem)>
            </WithStyles(List)>,
            "item": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(ListItem)>
                  <WithStyles(ListItemText)
                    primary="Horst Hansen"
                  />
                  <WithStyles(ListItemSecondaryAction)>
                    <WithStyles(IconButton)
                      onClick={[Function]}
                    >
                      <pure(DeleteIcon) />
                    </WithStyles(IconButton)>
                  </WithStyles(ListItemSecondaryAction)>
                </WithStyles(ListItem)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <WithStyles(ListItemText)
                      primary="Horst Hansen"
                    />,
                    <WithStyles(ListItemSecondaryAction)>
                      <WithStyles(IconButton)
                        onClick={[Function]}
                      >
                        <pure(DeleteIcon) />
                      </WithStyles(IconButton)>
                    </WithStyles(ListItemSecondaryAction)>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "primary": "Horst Hansen",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <WithStyles(IconButton)
                        onClick={[Function]}
                      >
                        <pure(DeleteIcon) />
                      </WithStyles(IconButton)>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <pure(DeleteIcon) />,
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Grid)
                item={true}
                xs={11}
              >
                <SearchableDropdownUser
                  helperText="Kinder Hinzufügen"
                  includeItem={[Function]}
                  itemToString={[Function]}
                  items={Array []}
                  label="Kind"
                  onChange={[Function]}
                />
              </WithStyles(Grid)>,
              <WithStyles(Grid)
                item={true}
                xs={1}
              >
                <WithStyles(Button)
                  className="add"
                  disabled={true}
                  mini={true}
                  onClick={[Function]}
                  variant="fab"
                >
                  <pure(AddIcon) />
                </WithStyles(Button)>
              </WithStyles(Grid)>,
            ],
            "container": true,
            "item": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <SearchableDropdownUser
                  helperText="Kinder Hinzufügen"
                  includeItem={[Function]}
                  itemToString={[Function]}
                  items={Array []}
                  label="Kind"
                  onChange={[Function]}
                />,
                "item": true,
                "xs": 11,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "helperText": "Kinder Hinzufügen",
                  "includeItem": [Function],
                  "itemToString": [Function],
                  "items": Array [],
                  "label": "Kind",
                  "onChange": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <WithStyles(Button)
                  className="add"
                  disabled={true}
                  mini={true}
                  onClick={[Function]}
                  variant="fab"
                >
                  <pure(AddIcon) />
                </WithStyles(Button)>,
                "item": true,
                "xs": 1,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <pure(AddIcon) />,
                  "className": "add",
                  "disabled": true,
                  "mini": true,
                  "onClick": [Function],
                  "variant": "fab",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
